Fixed alignment

--- a/frontend_v2/src/app/components/challenge/challengesubmit/challengesubmit.component.scss
+++ b/frontend_v2/src/app/components/challenge/challengesubmit/challengesubmit.component.scss
@@ -120,5 +120,5 @@ th {
 }
 
 #submission_option_style {
-  margin-left: 8px;
+  margin-left: 1em;
 }
